# vtuber-overlay-suite

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/.sqlx/: query-000e8aaf9af9cf1866b1f0d2e8d8ce44cba3ea06064188f916771ea4025bfec7.json  query-00f9ba4e6652cdb7e2498eb7c09440044f2160b44b562d7c82cbcd7af61a839c.json  query-1409c5419d3aa23d6782178b3a1e9625b7a6105c755ded7b530d3a3952887847.json  query-140cfcbe985b7dc68883267cf0235499a8c3b48aae6bbae5090978d11226ddbf.json  query-23f53a343e8f4206ade9792f31f2e685c25d2b77f85d62c0f7b64c97a65a68d2.json  query-2a195c34f9590bc036845f2f6d5c50bf5e3670271c588a90ede55f2a1f2457d4.json  query-2eb66027b24c2355c3f715e6c4fd1c722b901abe8946d46f8720adcfcf5e65b7.json  query-2ff0a2c2fb79c5f43925b094bfac3af1932498cd2167f2efa2bcc8cdf028aabf.json  query-459779bed9eb996fec4093e8811e83f5f0d69dfb03c40c62349cc5fdb12a8f3d.json  query-4dce9c8000dc96040016e72f4a7682bac3aee61909898fb16fb014421789827d.json  query-57321219a8330c008bff6b48dc2aff01d99a8ed2ffa6830a0529cc6d62bb2aae.json  query-70c1f5f833c307cb7ed88ef2805b29db25723f9e1f9f3f5a5364a7256bf9912f.json  query-7621dc0409601512414c5b2106ec4e1e9ff1559e25423fb85b0df1dbb6a62ae1.json  query-79b79458e552cff096a238bf24962393608036ff4af455e592e6f710478c5dd2.json  query-7bb9e0dbdc288673aed335aedd3255d22679d5eaf14b491238ea078e6df9a398.json  query-961007fee72ddb05373803d79859838fc3b5400faf3227b2a60ff6707be46f82.json  query-9e28d0643ab9f556be74976f6d3cc3667f553de89e02b9d15073d68a5aab9dd5.json  query-9f31f8da4c271b90efe77415b8929be92a0adb2be023b5b82401131e13348972.json  query-af4bbea123a3b6fd59e41199a4c0acec3f5037d950884d104ae96bf05b487045.json  query-af51729bcb5109b7587baf57d00a76e8ebc216a9c155ef366622413d203f3e25.json  query-afc73d27cb8a9b509881cfea3a8aa489d1448641620b7c07525929812c3bfe3d.json  query-d5ca309371959d6294b55871e7d8ea8b4767667417e1529b8ac18506c4c98e34.json  query-d8309f7eed65c9904b6e6118f0d6ac1dbd575ae9269d36234416e8fa1936ccd4.json  query-dba68c4cafdf02648ddba2091554236cd86cee6dd35d175404cc43e4baad4f5b.json  query-f68b4743618bddae19aa8acd1c0bbbaa14ca7cd2d63f9ca81679bdbc1eda5ab8.json  query-f987f86c5a784dbf90ac61db599ec976e40db87ea9579a0fa500d70fd70dff86.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_initial.sql  002_add_youtube_id_unique.sql
src-tauri/overlays/: combined-v2.html  combined.html  comment.html  setlist.html
src-tauri/proto/: youtube_live_chat.proto
(+187 files in other folders)
