[package]
name = "app"
version = "0.1.0"
description = "VTuber streaming support tool"
authors = ["manaca0923"]
license = "MIT"
repository = "https://github.com/manaca0923/vtuber-overlay-suite"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }
tonic-build = "0.12"
dotenvy = "0.15"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "chrono", "uuid"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
dirs = "5.0"
keyring = "3.6"
regex = "1.11"
once_cell = "1.19"
tonic = { version = "0.12", features = ["tls", "tls-roots"] }
prost = "0.13"
prost-types = "0.13"
rand = "0.8"
tokio-stream = "0.1"
lru = "0.12"
font-kit = "0.14"
futures = "0.3.31"

[dev-dependencies]
tempfile = "3.14"
mockito = "1.6"
